--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/vector-icons": "^6.3.1",
     "expo": "^26.0.0",
+    "native-base": "^2.4.1",
     "ramda": "^0.25.0",
-    "react": "16.3.0-alpha.1",
-    "react-native": "0.54.0"
+    "react": "^16.3.0-alpha.1",
+    "react-native": "^0.54.0"
   }
 }
