--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "native-base": "^2.4.1",
     "ramda": "^0.25.0",
     "react": "^16.3.0-alpha.1",
-    "react-native": "^0.54.0"
+    "react-native": "^0.54.0",
+    "react-native-elements": "^0.19.0"
   }
 }
